--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
         <!-- About Section Content-->
         <div class="row">
             <div class="col-lg-4 ml-auto"><p class="lead">Joyeux anniversaire frerot ! Une superbe famille avec un mignon Neo ("ouU tu es mignon Neo"), des passions games/vel/photos, un boulot qui te challenge, des amis,...Que souhaitez de plus ? Que le bonheur continue ! Emma </p></div>
-            <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+            <div class="col-lg-4 mr-auto"><p class="lead">Words of love from Rozenn coming soon. Tes soeurettes.</p></div>
         </div>
         <!-- About Section Button-->
         <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light" href="asset/img/portfolio/gift.png">
+            <a class="btn btn-xl btn-outline-light" href="assets/img/portfolio/gift1.png">
                 <i class="fas fa-star"></i>
-                Gift
+                Guest your Gift
             </a>
         </div>
     </div>
@@ -270,7 +270,7 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game2.png" alt="" />
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-5"> J'oubliais de mentionner les jeux. Street fighter, Wow, Diablo, Counter Strike... Ta passion pour le jeu et l'informatique a souvent envahi le salon de la maison à Kerlouan ou des salles de sports pour les fameuses LAN. Là aussi, le Japon répond à cette passion avec ses arcades ^^. <br> De mon coté, c'était clavier en polystyrène pour apprendre à taper vite, des "Cherche sur google" quand je savais pas - phrase que j'utilise aujourd'hui avec tous mes collègues et stagiaires -, un macbook en provenance directe du Japon alors que personne n'en avait encore en France :) </p>
                             <button class="btn btn-primary" data-dismiss="modal">
@@ -304,7 +304,7 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/breakfast.png" alt="" />
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/breakfast2.png" alt="" />
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-5">Le Japon, si parfait que ca ? Si tu peux te passer de ta baguette coupée parfaitement en 4 morceaux et recouverts de beurre salé puis de nutella à tremper dans le chocolat fait maison, ou des coulants au chocolat avec du beurre...C'est que c'est pas si mal que ca :D. Et puis, la ratatouille, ca se cuisine un peu partout...</p>
                             <button class="btn btn-primary" data-dismiss="modal">
@@ -338,7 +338,7 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/passion.png" alt="" />
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/passion2.png" alt="" />
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-5">L'informatique ou rien ? Photo, vélo, chant, whiskey et maintenant....ta petite famille - Neo, tu es mignon Neo #papagaga - tu es un geek qui croque la vie à pleine dent.  </p>
                             <button class="btn btn-primary" data-dismiss="modal">
@@ -372,7 +372,7 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                             <!-- Portfolio Modal - Image-->
-                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine.png" alt="" />
+                            <img class="img-fluid rounded mb-5" src="assets/img/portfolio/submarine2.png" alt="" />
                             <!-- Portfolio Modal - Text-->
                             <p class="mb-5">We all live in a yellow submarine. <br> Aujourd'hui, tout peut changer si vite...Continue de profiter de la vie et de ta famille, et j'espere que nous réussirons un jour à vivre tous pas trop loin pour pouvoir faire des souvenirs tous ensemble.  </p>
                             <button class="btn btn-primary" data-dismiss="modal">
